@@ -1,3 +1,13 @@
+2007-11-15  Mathias Hasselmann  <mathias@openismus.com>
+
+	Improve documentation and add epc_consumer_is_publisher_resolved.
+
+	* docs/reference/libepc/libepc-1.0-sections.txt:
+	Add epc_consumer_is_publisher_resolved.
+	* libepc/consumer.c, libepc/consumer.h: Improve documentation.
+	Add epc_consumer_is_publisher_resolved.
+	* libepc/publisher.c, libepc/publisher.h: Improve documentation.
+
 2007-11-14  Murray Cumming  <murrayc@openismus.com>
 
 	Various documentation improvements.
